--- a/index.html
+++ b/index.html
@@ -406,28 +406,57 @@
               <use href="./images4/symbol-defs.svg#icon-Close"></use>
             </svg>
           </button>
-          <h2 class="modal-header">Оставьте свои данные, мы вам перезвоним</h2>
+          <p class="modal-header">Оставьте свои данные, мы вам перезвоним</p>
           <form class="form modal-contact">
             <div class="form-field">
-              <label for="name">Имя</label>
-              <input type="text" name="name" id="name" autofocus />
-              <svg class="modal-icon" width="18" height="18">
-                <use href="./images5/symbol-defs.svg#icon-person"></use>
-              </svg>
+              <label for="name"
+                >Имя
+                <span class="modal-form-wrapper">
+                  <input
+                    type="text"
+                    class="modal-form-input"
+                    name="name"
+                    autofocus
+                  />
+                  <svg class="modal-icon" width="18" height="18">
+                    <use href="./images5/symbol-defs.svg#icon-person"></use>
+                  </svg>
+                </span>
+              </label>
             </div>
             <div class="form-field">
-              <label for="tel">Телефон</label>
-              <input type="tel" name="tel" id="tel" />
-              <svg class="modal-icon" width="18" height="18">
-                <use href="./images5/symbol-defs.svg#icon-phone"></use>
-              </svg>
+              <label for="tel"
+                >Телефон
+                <span class="modal-form-wrapper">
+                  <input
+                    type="tel"
+                    name="tel"
+                    class="modal-form-input"
+                    name="name"
+                  />
+                  <svg class="modal-icon" width="18" height="18">
+                    <use href="./images5/symbol-defs.svg#icon-phone"></use>
+                  </svg>
+                </span>
+              </label>
             </div>
             <div class="form-field">
-              <label for="mail">Почта</label>
-              <input type="email" name="mail" id="mail" />
-              <svg class="modal-icon" width="18" height="18">
-                <use href="./images5/symbol-defs.svg#icon-email-black"></use>
-              </svg>
+              <label for="mail"
+                >Почта
+                <span class="modal-form-wrapper">
+                  <input
+                    type="email"
+                    name="mail"
+                    class="modal-form-input"
+                    name="name"
+                  />
+                  <svg class="modal-icon" width="18" height="18">
+                    <use
+                      href="./images5/symbol-defs.svg#icon-email-black"
+                    ></use>
+                  </svg>
+                </span>
+              </label>
             </div>
             <div class="form-field">
               <label for="comment">Коментарий</label>
@@ -510,6 +539,25 @@
               </a>
             </li>
           </ul>
+        </div>
+        <div class="footer-form-subscribe">
+          <p class="form-footer-head">Подпишитесь на рассылку</p>
+          <div class="subscribe-footer-section">
+          <form class="form-footer">
+            <div class="form-subscribe">
+              <label for="email" class="subscribe-label"
+                >
+              <input type="e-mail" name="email" placeholder="E-mail" /></label
+              >
+            </div>
+            <button type="button" class="subscribe-btn">
+              Подписаться
+              <svg class="form-footer-icon" width="24" height="24">
+                <use href="./images5/symbol-defs.svg#icon-send"></use>
+              </svg>
+            </button>
+          </div>
+          </form>
         </div>
       </div>
     </footer>
