--- a/index.html
+++ b/index.html
@@ -428,12 +428,7 @@
               <label for="tel"
                 >Телефон
                 <span class="modal-form-wrapper">
-                  <input
-                    type="tel"
-                    name="tel"
-                    class="modal-form-input"
-                    name="name"
-                  />
+                  <input type="tel" name="tel" class="modal-form-input" />
                   <svg class="modal-icon" width="18" height="18">
                     <use href="./images5/symbol-defs.svg#icon-phone"></use>
                   </svg>
@@ -444,12 +439,7 @@
               <label for="mail"
                 >Почта
                 <span class="modal-form-wrapper">
-                  <input
-                    type="email"
-                    name="mail"
-                    class="modal-form-input"
-                    name="name"
-                  />
+                  <input type="email" name="mail" class="modal-form-input" />
                   <svg class="modal-icon" width="18" height="18">
                     <use
                       href="./images5/symbol-defs.svg#icon-email-black"
@@ -542,21 +532,16 @@
         </div>
         <div class="footer-form-subscribe">
           <p class="form-footer-head">Подпишитесь на рассылку</p>
-          <div class="subscribe-footer-section">
           <form class="form-footer">
-            <div class="form-subscribe">
-              <label for="email" class="subscribe-label"
-                >
-              <input type="e-mail" name="email" placeholder="E-mail" /></label
-              >
-            </div>
+            <label for="email" class="subscribe-label">
+              <input type="email" name="email" placeholder="E-mail"
+            /></label>
             <button type="button" class="subscribe-btn">
               Подписаться
               <svg class="form-footer-icon" width="24" height="24">
                 <use href="./images5/symbol-defs.svg#icon-send"></use>
               </svg>
             </button>
-          </div>
           </form>
         </div>
       </div>
