--- a/portfolio.html
+++ b/portfolio.html
@@ -347,6 +347,20 @@
             </li>
           </ul>
         </div>
+        <div class="footer-form-subscribe">
+          <p class="form-footer-head">Подпишитесь на рассылку</p>
+          <form class="form-footer">
+            <label for="email" class="subscribe-label">
+              <input type="email" name="email" placeholder="E-mail"
+            /></label>
+            <button type="button" class="subscribe-btn">
+              Подписаться
+              <svg class="form-footer-icon" width="24" height="24">
+                <use href="./images5/symbol-defs.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
