Исправляет лейблы и инпуты

--- a/portfolio.html
+++ b/portfolio.html
@@ -350,7 +350,7 @@
         <div class="footer-form-subscribe">
           <p class="form-footer-head">Подпишитесь на рассылку</p>
           <form class="form-footer">
-            <label for="email" class="subscribe-label">
+            <label class="subscribe-label">
               <input type="email" name="email" placeholder="E-mail"
             /></label>
             <button type="button" class="subscribe-btn">
