--- a/index.html
+++ b/index.html
@@ -399,6 +399,7 @@
           </ul>
         </div>
       </section>
+      <!-- Модальное окно -->
       <div data-modal class="backdrop is-hidden">
         <div class="modal">
           <button data-modal-close class="button-close">
@@ -409,13 +410,17 @@
           <p class="modal-header">Оставьте свои данные, мы вам перезвоним</p>
           <form class="form modal-contact">
             <div class="form-field">
-              <label for="name"
+              <label class="modal-form-label"
                 >Имя
                 <span class="modal-form-wrapper">
                   <input
                     type="text"
                     class="modal-form-input"
                     name="name"
+                    minlength="2"
+                    pattern="[a-zA-Zа-яёА-ЯЁ]+"
+                    title="Имя должно содержать буквы кирилицы или латиницы минимально 2"
+                    required
                     autofocus
                   />
                   <svg class="modal-icon" width="18" height="18">
@@ -425,10 +430,17 @@
               </label>
             </div>
             <div class="form-field">
-              <label for="tel"
+              <label class="modal-form-label"
                 >Телефон
                 <span class="modal-form-wrapper">
-                  <input type="tel" name="tel" class="modal-form-input" />
+                  <input
+                    type="tel"
+                    name="tel"
+                    class="modal-form-input"
+                    pattern="[0-9]{3}[0-9]{3}[0-9]{2}[0-9]{2}"
+                    title="Пример 069-069-69-69"
+                    required
+                  />
                   <svg class="modal-icon" width="18" height="18">
                     <use href="./images5/symbol-defs.svg#icon-phone"></use>
                   </svg>
@@ -436,10 +448,15 @@
               </label>
             </div>
             <div class="form-field">
-              <label for="mail"
+              <label class="modal-form-label"
                 >Почта
                 <span class="modal-form-wrapper">
-                  <input type="email" name="mail" class="modal-form-input" />
+                  <input
+                    type="email"
+                    name="mail"
+                    class="modal-form-input"
+                    required
+                  />
                   <svg class="modal-icon" width="18" height="18">
                     <use
                       href="./images5/symbol-defs.svg#icon-email-black"
@@ -533,7 +550,7 @@
         <div class="footer-form-subscribe">
           <p class="form-footer-head">Подпишитесь на рассылку</p>
           <form class="form-footer">
-            <label for="email" class="subscribe-label">
+            <label class="subscribe-label">
               <input type="email" name="email" placeholder="E-mail"
             /></label>
             <button type="button" class="subscribe-btn">
