--- a/index.html
+++ b/index.html
@@ -407,66 +407,63 @@
               <use href="./images4/symbol-defs.svg#icon-Close"></use>
             </svg>
           </button>
+
           <p class="modal-header">Оставьте свои данные, мы вам перезвоним</p>
+
           <form class="form modal-contact">
-            <div class="form-field">
-              <label class="modal-form-label"
-                >Имя
-                <span class="modal-form-wrapper">
-                  <input
-                    type="text"
-                    class="modal-form-input"
-                    name="name"
-                    minlength="2"
-                    pattern="[a-zA-Zа-яёА-ЯЁ]+"
-                    title="Имя должно содержать буквы кирилицы или латиницы минимально 2"
-                    required
-                    autofocus
-                  />
-                  <svg class="modal-icon" width="18" height="18">
-                    <use href="./images5/symbol-defs.svg#icon-person"></use>
-                  </svg>
-                </span>
-              </label>
-            </div>
-            <div class="form-field">
-              <label class="modal-form-label"
-                >Телефон
-                <span class="modal-form-wrapper">
-                  <input
-                    type="tel"
-                    name="tel"
-                    class="modal-form-input"
-                    pattern="[0-9]{3}[0-9]{3}[0-9]{2}[0-9]{2}"
-                    title="Пример 069-069-69-69"
-                    required
-                  />
-                  <svg class="modal-icon" width="18" height="18">
-                    <use href="./images5/symbol-defs.svg#icon-phone"></use>
-                  </svg>
-                </span>
-              </label>
-            </div>
-            <div class="form-field">
-              <label class="modal-form-label"
-                >Почта
-                <span class="modal-form-wrapper">
-                  <input
-                    type="email"
-                    name="mail"
-                    class="modal-form-input"
-                    required
-                  />
-                  <svg class="modal-icon" width="18" height="18">
-                    <use
-                      href="./images5/symbol-defs.svg#icon-email-black"
-                    ></use>
-                  </svg>
-                </span>
-              </label>
-            </div>
-            <div class="form-field">
-              <label for="comment">Коментарий</label>
+            <label class="modal-form-label"
+              >Имя
+              <span class="modal-form-wrapper">
+                <input
+                  type="text"
+                  class="modal-form-input"
+                  name="name"
+                  minlength="2"
+                  pattern="[a-zA-Zа-яёА-ЯЁ]+"
+                  title="Имя должно содержать буквы кирилицы или латиницы минимально 2"
+                  required
+                  autofocus
+                />
+                <svg class="modal-icon" width="18" height="18">
+                  <use href="./images5/symbol-defs.svg#icon-person"></use>
+                </svg>
+              </span>
+            </label>
+
+            <label class="modal-form-label"
+              >Телефон
+              <span class="modal-form-wrapper">
+                <input
+                  type="tel"
+                  name="tel"
+                  class="modal-form-input"
+                  pattern="[0-9]{3}[0-9]{3}[0-9]{2}[0-9]{2}"
+                  title="Пример 069-069-69-69"
+                  required
+                />
+                <svg class="modal-icon" width="18" height="18">
+                  <use href="./images5/symbol-defs.svg#icon-phone"></use>
+                </svg>
+              </span>
+            </label>
+
+            <label class="modal-form-label"
+              >Почта
+              <span class="modal-form-wrapper">
+                <input
+                  type="email"
+                  name="mail"
+                  class="modal-form-input"
+                  required
+                />
+                <svg class="modal-icon" width="18" height="18">
+                  <use href="./images5/symbol-defs.svg#icon-email-black"></use>
+                </svg>
+              </span>
+            </label>
+
+            <label for="comment" class="modal-form-label"
+              >Коментарий
               <textarea
                 class="comment text-comment"
                 name="comment"
@@ -474,7 +471,8 @@
                 rows="8"
                 placeholder="Введите текст"
               ></textarea>
-            </div>
+            </label>
+
             <div class="checkbox-agreement">
               <input
                 class="checkbox visually-hidden"
@@ -551,9 +549,9 @@
           <p class="form-footer-head">Подпишитесь на рассылку</p>
           <form class="form-footer">
             <label class="subscribe-label">
-              <input type="email" name="email" placeholder="E-mail"
+              <input type="email" name="mail" placeholder="E-mail"
             /></label>
-            <button type="button" class="subscribe-btn">
+            <button type="submit" class="subscribe-btn">
               Подписаться
               <svg class="form-footer-icon" width="24" height="24">
                 <use href="./images5/symbol-defs.svg#icon-send"></use>
