--- a/portfolio.html
+++ b/portfolio.html
@@ -353,7 +353,7 @@
             <label class="subscribe-label">
               <input type="email" name="email" placeholder="E-mail"
             /></label>
-            <button type="button" class="subscribe-btn">
+            <button type="submit" class="subscribe-btn">
               Подписаться
               <svg class="form-footer-icon" width="24" height="24">
                 <use href="./images5/symbol-defs.svg#icon-send"></use>
